libraries/ckit/regression/valid-programs/a62.c
  typedef struct { int x,y,z; } w;
  
  void main() {
   w foo;
   foo = foo;
  }
  
